--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
@@ -5,6 +15,9 @@ body {
 }
 ul,
 ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style-type: none;
 }
 a {
@@ -12,6 +25,16 @@ a {
 }
 button {
   cursor: pointer;
+}
+img {
+  display: block;
+}
+.container {
+  width: 1440px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 /* Header */
 .logo {
