--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,12 @@ img {
 .header-container {
   display: flex;
   margin-top: 24px;
-  margin-bottom: 33px;
+  margin-bottom: 24px;
   justify-content: space-between;
 }
 .navigation {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 .logo {
   color: #4d5ae5;
@@ -62,6 +62,7 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-right: 76px;
+  padding-top: 24px;
 }
 .logo-part {
   color: #2e2f42;
