--- a/css/styles.css
+++ b/css/styles.css
@@ -277,8 +277,11 @@ img {
 /* Footer */
 .footer-back-color {
   background-color: #2e2f42;
+  width: 1440px;
   padding-top: 100px;
+  padding-right: 1020px;
   padding-bottom: 100px;
+  padding-left: 156px;
 }
 .footer-logo-part {
   color: #f4f4fd;
