--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,8 @@ img {
   width: 1158px;
   padding-right: 15px;
   padding-left: 15px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 /* Header */
 .header {
@@ -118,7 +119,7 @@ img {
 .hero-container {
   background-color: #2e2f42;
   width: 1440px;
-  padding-bottom: 292px;
+  padding: 188px 0;
 }
 .main-title {
   font-weight: 700;
@@ -131,8 +132,6 @@ img {
   margin-left: auto;
   max-width: 496px;
   margin-bottom: 48px;
-  padding-top: 188px;
-  padding-bottom: 188px;
 }
 .button-title {
   font-weight: 500;
@@ -195,6 +194,8 @@ img {
 /* Section 3 */
 .list-back-color {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-name-container {
   padding: 32px 0;
@@ -212,8 +213,6 @@ img {
 .team-list {
   display: flex;
   gap: 24px;
-  width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
 }
 .team-name {
   font-weight: 500;
@@ -244,13 +243,16 @@ img {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  margin-bottom: 8px;
+  margin-bottom: 72px;
 }
 .service-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
 .portfolio-container {
   padding: 32px 16px;
@@ -266,13 +268,13 @@ img {
   padding-top: 32px;
   padding-bottom: 8px;
   padding-left: 16px;
+  margin-bottom: 8px;
 }
 .service-item {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  width: calc((100%-58px) / 3);
   padding-left: 16px;
   padding-bottom: 32px;
   border-bottom: 1px solid #e7e9fc;
