--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,9 @@ img {
 }
 .container {
   width: 1158px;
+  margin: 0 auto;
   padding-right: 15px;
   padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
 }
 /* Header */
 .header {
