--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .team-prof {
   font-size: 16px;
@@ -224,7 +225,6 @@ img {
   text-align: center;
   color: #434455;
   width: calc((100%-72px) / 4);
-  margin-top: 8px;
 }
 /* Section 4 */
 .portfolio-title {
@@ -257,13 +257,13 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .service-item {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin-top: 8px;
   border-bottom: 1px solid #e7e9fc;
 }
 /* Footer */
